--- a/templates/base.html
+++ b/templates/base.html
@@ -87,6 +87,7 @@
     
     <!-- Component modules -->
     <script src="{{ url_for('static', filename='js/components/navbar.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/tooltips.js') }}"></script>
     <script src="{{ url_for('static', filename='js/components/main-content.js') }}"></script>
     <script src="{{ url_for('static', filename='js/components/text-input.js') }}"></script>
     <script src="{{ url_for('static', filename='js/components/settings.js') }}"></script>
